@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* pkgcore no longer allows comments in profiles/categories.
+
 * pkgcore now allows profile package.mask and friends as directories for user
   configuration, and within repositories that set profile-format = portage-1
   in their layout.conf.
